--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ DataEngineer26-main/
 workshop/
 git_class/test.md
 eduatoz/
+Python/crawling/
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
