--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ workshop/
 git_class/test.md
 eduatoz/
 Python/crawling/
+data/
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,python,visualstudiocode,pycharm,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,python,visualstudiocode,pycharm,django
